<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/navAboutUs"
            android:icon="@drawable/ic_about_us"
            android:title="@string/nav_about_us"/>
        <item
            android:id="@+id/navPhotos"
            android:icon="@drawable/ic_nav_photos"
            android:title="@string/nav_photos"/>
        <item
            android:id="@+id/navRulesAndRegulations"
            android:icon="@drawable/ic_nav_rules_regulations"
            android:title="@string/nav_rules_and_regulations"/>
        <item
            android:id="@+id/navCwcMembers"
            android:icon="@drawable/ic_cwc_members"
            android:title="@string/nav_cwc_members"/>
        <item
            android:id="@+id/navGroupMembers"
            android:icon="@drawable/ic_cwc_members"
            android:title="@string/nav_group_members"/>
    </group>

    <item
        android:title="Communication">
        <menu>
            <item
                android:id="@+id/navWhatsAppJoin"
                android:icon="@drawable/ic_whatsapp_logo"
                android:title="@string/nav_whatsapp_group_join"/>
            <item
                android:id="@+id/navFaceBookPage"
                android:icon="@drawable/ic_facebook_logo"
                android:title="@string/nav_facebook_page_join"/>
            <item
                android:id="@+id/navMapUs"
                android:icon="@drawable/ic_directions_map"
                android:title="@string/nav_map_us"/>
            <item
                android:id="@+id/navEmailUs"
                android:icon="@drawable/ic_email"
                android:title="@string/nav_mail_us"/>
            <item
                android:id="@+id/navCallUs"
                android:icon="@drawable/ic_nav_call"
                android:title="@string/nav_call_us"/>
            <item
                android:id="@+id/navJoinRvs"
                android:icon="@drawable/ic_flag"
                android:title="@string/nav_join_rsv"/>
        </menu>
    </item>
</menu>