<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".AddNewEventActivity">
    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AddEventActivity">

        <EditText
            android:id="@+id/etNameWhoPosted"
            android:hint="@string/hint_enter_name"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/etDescription"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_description_of_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/ivImageToBeUploaded"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_image_event"
            android:layout_width="300dp"
            android:layout_height="300dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivAttachment"
                android:layout_alignTop="@id/btnPickImage"
                android:layout_alignBottom="@id/btnPickImage"
                android:src="@drawable/ic_attachment"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <Button
                android:id="@+id/btnPickImage"
                android:layout_toEndOf="@id/ivAttachment"
                android:text="@string/btn_text_pick_photo"
                android:tint="#666666"
                android:textStyle="bold"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:id="@+id/pbLoadingIndicator"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btnUpload"
            android:text="@string/btn_text_upload_event"
            android:textColor="#fff"
            android:background="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>